<resources>
    <string name="app_name">SQLiteRevisionExample</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="salary">SALARY</string>
    <string name="insert">INSERT</string>
    <string name="fetch">Fetch</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">ID</string>
    <string name="address">Address</string>
    <string name="fetch_info">Fetch_Info</string>
</resources>
